--- a/Página-Inicial.css
+++ b/Página-Inicial.css
@@ -210,7 +210,7 @@
     height: 340px;
   }
 }.u-section-2 {
-  background-image: url("images/-min.png");
+  background-image: url("images/-min.png?rand=c568");
 }
 
 .u-section-2 .u-sheet-1 {
