--- a/Página-Inicial.css
+++ b/Página-Inicial.css
@@ -22,6 +22,7 @@
   letter-spacing: 3px;
   text-transform: uppercase;
   font-weight: 300;
+  animation-duration: 1000ms;
   margin: 117px 20px 0 0;
 }
 
