--- a/SparDEV.css
+++ b/SparDEV.css
@@ -23,28 +23,30 @@
   text-transform: uppercase;
   font-weight: 300;
   animation-duration: 1000ms;
-  margin: 117px 20px 0 0;
+  margin: 117px 20px 0 auto;
 }
 
 .u-section-1 .u-text-2 {
   font-size: 4.25rem;
   font-weight: 700;
   animation-duration: 1000ms;
-  margin: 20px 0 0;
+  margin: 20px auto 0 0;
 }
 
 .u-section-1 .u-text-3 {
   font-style: italic;
-  margin: 20px 0 0;
+  margin: 20px auto 0 0;
 }
 
 .u-section-1 .u-text-4 {
   letter-spacing: 1px;
-  margin: 38px 130px 0 0;
+  margin: 38px 130px 0 auto;
 }
 
 .u-section-1 .u-btn-1 {
   border-style: none none solid;
+  margin-left: auto;
+  margin-right: auto;
   padding: 0;
 }
 
