--- a/ֆքǟʀɖɛʋ.css
+++ b/ֆքǟʀɖɛʋ.css
@@ -1,4 +1,4 @@
-.u-section-1 {
+ .u-section-1 {
   background-image: linear-gradient(75deg, #7d20d3, #ed007c);
 }
 
@@ -93,7 +93,7 @@
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 371px;
+    min-height: 490px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -103,6 +103,8 @@
   .u-section-1 .u-image-1 {
     width: 335px;
     height: 335px;
+    margin-top: 58px;
+    margin-right: auto;
   }
 
   .u-section-1 .u-layout-cell-2 {
@@ -134,7 +136,7 @@
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 539px;
+    min-height: 711px;
   }
 
   .u-section-1 .u-image-1 {
@@ -192,8 +194,9 @@
     margin-right: 0;
     margin-left: 6px;
   }
-}.u-section-2 {
+} .u-section-2 {
   background-image: url("images/w41.gif");
+  background-position: 50% 50%;
 }
 
 .u-section-2 .u-sheet-1 {
@@ -421,10 +424,6 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-2 {
-    background-position: 50% 50%;
-  }
-
   .u-section-2 .u-sheet-1 {
     min-height: 534px;
   }
@@ -641,7 +640,7 @@
   .u-section-2 .u-layout-cell-9 {
     min-height: 230px;
   }
-}.u-section-3 {
+} .u-section-3 {
   background-image: none;
 }
 
@@ -699,8 +698,8 @@
 @media (max-width: 1199px) {
   .u-section-3 .u-group-1 {
     width: 587px;
-    margin-top: 65px;
-    margin-right: 160px;
+    margin-top: 175px;
+    margin-right: auto;
   }
 
   .u-section-3 .u-image-1 {
@@ -709,7 +708,8 @@
   }
 
   .u-section-3 .u-group-2 {
-    margin-top: -251px;
+    margin-top: -361px;
+    margin-bottom: 60px;
   }
 }
 
@@ -741,7 +741,6 @@
   .u-section-3 .u-group-2 {
     margin-top: -425px;
     margin-right: 20px;
-    margin-bottom: 60px;
   }
 
   .u-section-3 .u-text-1 {
@@ -761,7 +760,7 @@
 
   .u-section-3 .u-group-1 {
     width: 402px;
-    margin-right: 0;
+    margin-right: auto;
     margin-left: auto;
   }
 
@@ -806,7 +805,7 @@
     margin-right: auto;
     margin-left: 0;
   }
-}.u-section-4 {
+} .u-section-4 {
   background-image: none;
 }
 
@@ -1165,7 +1164,7 @@
   .u-section-4 .u-repeater-1 {
     grid-template-columns: 100%;
   }
-}.u-section-5 {
+} .u-section-5 {
   background-image: none;
 }
 
@@ -1223,7 +1222,7 @@
   .u-section-5 .u-text-2 {
     width: 340px;
   }
-}.u-section-6 {
+} .u-section-6 {
   background-image: url("images/-min1.jpg");
   background-position: 50% 50%;
 }
@@ -1592,7 +1591,7 @@
     width: 320px;
     height: 402px;
   }
-}.u-section-8 {
+} .u-section-8 {
   background-image: none;
 }
 
@@ -2120,7 +2119,7 @@
   .u-section-10 .u-group-1 {
     width: 340px;
   }
-}.u-section-11 {
+} .u-section-11 {
   background-image: none;
 }
 
